[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://pics/light_shadow_background.png" type="Texture" id=4]
[ext_resource path="res://Scenes/ReplayHud.gd" type="Script" id=5]

[sub_resource type="Theme" id=1]
Button/fonts/font = null

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.243137, 0.6, 0.568627, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.564706, 0.568627, 0.568627, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[node name="GameManager" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 20, -151 )
scale = Vector2( 100, 100 )
texture = ExtResource( 4 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 65536, 1, 0, 65537, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 378, -209 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="ReplayHud" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="ReplayButton" type="Button" parent="ReplayHud"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.5
margin_top = -10.0
margin_right = 44.5
margin_bottom = 10.0
text = "Play Again??"

[node name="Label" type="Label" parent="ReplayHud"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = 27.0
margin_right = 35.0
margin_bottom = 41.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 2 )
text = "Final Score"

[connection signal="game_over" from="." to="ReplayHud" method="_on_GameManager_game_over"]
[connection signal="game_start" from="." to="Player" method="_on_GameManager_game_start"]
[connection signal="player_found_goal" from="." to="Player" method="_on_GameManager_player_found_goal"]
[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]
[connection signal="pressed" from="ReplayHud/ReplayButton" to="." method="_on_ReplayButton_pressed"]
